<resources>
    <string name="app_name">calculator</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>

    <string name="btn_operation_plus">+</string>
    <string name="btn_operation_minus">-</string>
    <string name="btn_operation_divide">/</string>
    <string name="btn_operation_multiply">*</string>
    <string name="btn_operation_equal">=</string>
    <string name="btn_operation_back">back</string>
    <string name="btn_operation_clear">clr</string>
    <string name="btn_operation_coma">,</string>


</resources>