<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        android:textSize="56sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        tools:text="tv_sign" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign"
        tools:text="tv_ans" />

    <RelativeLayout
        android:id="@+id/rl_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_one" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_1"
            android:text="@string/btn_two" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_2"
            android:text="@string/btn_three" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_1"
            android:layout_margin="8dp"
            android:text="@string/btn_four" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_2"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_4"
            android:text="@string/btn_five" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_3"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_5"
            android:text="@string/btn_six" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_4"
            android:layout_margin="8dp"
            android:text="@string/btn_seven" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_5"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_7"
            android:text="@string/btn_eight" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_6"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_8"
            android:text="@string/btn_nine" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_8"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_7"
            android:text="@string/btn_zero" />

        <Button
            android:id="@+id/btn_comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_9"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_8"
            android:text="@string/btn_operation_coma" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_comma"
            android:text="@string/btn_operation_clear" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_3"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_comma"
            android:text="@string/btn_operation_minus" />


        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_6"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_comma"
            android:text="@string/btn_operation_plus" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_answer"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_comma"
            android:text="@string/btn_operation_back" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_answer"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_7"
            android:text="@string/btn_operation_divide" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_answer"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/btn_0"
            android:text="@string/btn_operation_multiply" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_9"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/btn_comma"
            android:text="@string/btn_operation_equal" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>